// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`beautify 1`] = `
"Error: 
    Object.getStack (packages/error/__tests__/index.ts:39:17)"
`;

exports[`beautify with title 1`] = `
"Error: title
    Object.<anonymous> (packages/error/__tests__/index.ts:48:17)"
`;

exports[`getStack: -1 1`] = `
"Error: 
    at getStack (/packages/error/__tests__/index.ts:26:16)
    at c (/packages/error/__tests__/index.ts:22:10)
    at b (/packages/error/__tests__/index.ts:18:10)
    at Object.a (/packages/error/__tests__/index.ts:31:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 0 1`] = `
"Error: 
    at getStack (/packages/error/__tests__/index.ts:26:16)
    at c (/packages/error/__tests__/index.ts:22:10)
    at b (/packages/error/__tests__/index.ts:18:10)
    at Object.a (/packages/error/__tests__/index.ts:32:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 1 1`] = `
"Error: 
    at getStack (/packages/error/__tests__/index.ts:26:16)
    at c (/packages/error/__tests__/index.ts:22:10)
    at b (/packages/error/__tests__/index.ts:18:10)
    at Object.a (/packages/error/__tests__/index.ts:33:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 2 1`] = `
"Error: 
    at c (/packages/error/__tests__/index.ts:22:10)
    at b (/packages/error/__tests__/index.ts:18:10)
    at Object.a (/packages/error/__tests__/index.ts:34:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: 3 1`] = `
"Error: 
    at b (/packages/error/__tests__/index.ts:18:10)
    at Object.a (/packages/error/__tests__/index.ts:35:10)
    at new Promise (<anonymous>)"
`;

exports[`getStack: undefined 1`] = `
"Error: 
    at getStack (/packages/error/__tests__/index.ts:26:16)
    at c (/packages/error/__tests__/index.ts:22:10)
    at b (/packages/error/__tests__/index.ts:18:10)
    at Object.a (/packages/error/__tests__/index.ts:30:10)
    at new Promise (<anonymous>)"
`;

exports[`handle just the title fine 1`] = `
"multine
error
message"
`;

exports[`handle multine error message correctly 1`] = `
"Error: multine
error
message
    Object.<anonymous> (packages/error/__tests__/index.ts:57:17)"
`;

exports[`keep at least one stack line 1`] = `
"Error: 
    Promise.finally.completed (node_modules/jest-circus/build/jestadapterinit.js:1559:28)"
`;
